[package]
name = "test-built"
version = "0.1.0"
authors = ["Nick Schipano <maverickn@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = {version="0.4.2", features =["git2", "chrono"] }

[dependencies]
serde_json = "1.0.57"
serde = "1.0.114"
clap = "2.33.1"
